--- a/biblo.bib
+++ b/biblo.bib
@@ -180,7 +180,7 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
 
 
 @misc{ElectronicHealthRecords,
-  title = {Electronic {{Health Records}} | {{CMS}}},
+  title = {Electronic Health Records -CMS},
   howpublished = {https://www.cms.gov/Medicare/E-Health/EHealthRecords},
   
 }
@@ -381,7 +381,7 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   title = {Healthcare Data Volume Globally 2020 Forecast},
   journal = {Statista},
   abstract = {The amount of global healthcare data is expected to increase dramatically by the year 2020.},
-  howpublished = {https://www.statista.com/statistics/1037970/global-healthcare-data-volume/},
+  howpublished = {\url{https://www.statista.com/statistics/1037970/global-healthcare-data-volume/}},
   langid = {english},
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\FYD9XM4M\\global-healthcare-data-volume.html}
 }
@@ -406,7 +406,7 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
 
 @misc{DataAnalysisProcess,
   title = {Data {{Analysis}} - {{Process}}},
-  howpublished = {https://www.tutorialspoint.com/excel\_data\_analysis/data\_analysis\_process.htm},
+  howpublished = {\url{https://www.tutorialspoint.com/excel\_data\_analysis/data\_analysis\_process.htm}},
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\VWZ99CHW\\data_analysis_process.html}
 }
 @article{DataAnalysis2022,
@@ -605,7 +605,7 @@ url="https://drive.google.com/file/d/11O9U-dOV0R6z5rNibazUAKzFiaCoNwJa/view?usp=
 }
 
 @misc{IntroductionBootstrapV5,
-  title = {Introduction {$\cdot$} {{Bootstrap}} v5.0},
+  title = {Introduction{{Bootstrap}} v5.0},
   howpublished = {https://getbootstrap.com/docs/5.0/getting-started/introduction/}
 }
 
