--- a/parts/contribution.tex
+++ b/parts/contribution.tex
@@ -314,5 +314,5 @@ Depending on the libraries we integrated in this project, we used different type
 \subsection{Image Data}
 The rendering data produced from the previous phase will be displayed in our personalized dashboard application, presented in the next chapter.
 
-\section{Conclusion}
+\section{Summary}
 In this chapter, we presented our proposed system process, which goes through three phases: data preparation, data rendering, and image data. The data preparation phase consists of choosing the row data and pretreating it then integrating it. The data rendering phase consists of analyzing the output data to display it in the next phase. This phase consists of three stages:  Patient Data file retrieval (XML), reading user’s role and preferences, then Visualization use cases generation, and lastly the image data phase which will be explained in the next chapter. 
