--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -124,7 +124,7 @@ The EMR can contain medical history, diagnoses, medications, immunizations and d
 The EHR contains similar details as the EMR, but also other relevant data like information from wearable devices, demographics, and insurance information. It can also contain lab data and imaging reports that come from other offices or practices. Assuming the software is compatible, other offices and practices can access the information within an EHR to help coordinate care and make clinical decisions\cite{KeyMaintainingMedical} (Table \ref{tab:EMRvsEHR}) gives an overview of this difference:
 \input{Tables/chapter1/emr_ehr_diff.tex}
 
-\newpage
+
 \subsection{Personal health record}
 Electronic Personal Health Records (ePHRs) are a representation of health records connected to the care of a patient and are managed by the patient\cite{demirisPatientcenteredApplicationsUse2008}, unlike EHRs, which are managed by health care providers. ePHRs allow healthcare consumers the luxury of deciding which health information to share with healthcare providers\cite{tangPersonalHealthRecords2006}. Ozok et al.\cite{PaperbasedComputerbasedRecords} defined ePHR systems as patient centric, multi-functional, health management systems developed for managing and storing lifelong personal health information for various purposes from chronic to critical, medical and preventive care\cite{alsahafiOverviewElectronicPersonal2018}.
 
@@ -154,10 +154,10 @@ Typical cross-organizational e-health applications are\cite{ruotsalainenCrosspla
 \item Patients’ access to their own EHRs.
 \end{itemize}
 
-
-That is why Electronic health records management attracts significant international interest and sets the scenery for the establishment of a distributed, coalition-based, security policy enhanced records exchange framework among different medical domains. Several European projects have proposed candidate solutions for secure inter-operations between medical domains. In the HARP project, security profiles related to access rights are dynamically downloaded to the client side. The MEDITRAV EUproject attempts to overcome national or linguistic barriers by adopting the solution of a multilingual portable personal record. These approaches, pose mainly their research effort on the security requirements for effective electronic health record management, still they confront mainly to stable infrastructures\cite{belsisPervasiveSecureElectronic2005}.
 \newpage
-\section{Conclusion}
+That is why Electronic health records management attracts significant international interest and sets the scenery for the establishment of a distributed, coalition-based, security policy enhanced records exchange framework among different medical domains. Several European projects have proposed candidate solutions for secure inter-operations between medical domains. In the HARP project, security profiles related to access rights are dynamically downloaded to the client side. The MEDITRAV EUproject attempts to overcome national or linguistic barriers by adopting the solution of a multilingual portable personal record. These approaches, pose mainly their research effort on the security requirements for effective electronic health record management, still they confront mainly to stable infrastructures\cite{belsisPervasiveSecureElectronic2005}.
+
+\section{Summary}
 We have seen in this chapter the principal components of the healthcare sector from its principal actors through its activities to the data generated from each activity. Then we moved to the different medical electronic records management types, and we presented the differences between them. Finally, we ended on to the importance of the security field in the treatment of the patient data and medical data, then we did a quick overview of some of the projects implemented in this regard.
 
 
